MPT-7523 Create AWS organization

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,10 +3,10 @@ sonar.organization=softwareone-mpt-github
 
 sonar.language=py
 
-sonar.sources=aws_ext
+sonar.sources=swo_aws_extension
 sonar.tests=tests
-sonar.inclusions=aws_ext/**
-sonar.exclusions=tests/**, aws_ext/templates/**
+sonar.inclusions=swo_aws_extension/**
+sonar.exclusions=tests/**, swo_aws_extension/templates/**
 
 sonar.python.coverage.reportPaths=coverage.xml
 sonar.python.xunit.reportPath=coverage.xml
