--- a/.env.sample
+++ b/.env.sample
@@ -3,8 +3,12 @@ MPT_PORTAL_BASE_URL=http://devmock:8000
 MPT_API_BASE_URL=http://devmock:8000
 MPT_API_TOKEN=<vendor-api-token>
 MPT_ORDERS_API_POLLING_INTERVAL_SECS=120
-EXT_WEBHOOKS_SECRETS={"PRD-1111-1111": "<super-jwt-secret>"}
+EXT_WEBHOOKS_SECRETS={"PRD-1111-1111":"<super-jwt-secret>"}
 EXT_MSTEAMS_WEBHOOK_URL=https://whatever.webhook.office.com/webhookb2/<...>
 EXT_AWS_SES_CREDENTIALS=<access-key>:<secret-key>
 EXT_EMAIL_NOTIFICATIONS_SENDER=no-reply@domain.com
 EXT_EMAIL_NOTIFICATIONS_ENABLED=1
+EXT_CCP_CLIENT_ID=123456789
+EXT_AWS_OPENID_SCOPE=urn://dev.aws.services.softwareone.com/.default
+EXT_CCP_OAUTH_URL=https://login.microsoftonline.com/<tenant_id>/oauth2/v2.0/token
+EXT_CCP_CLIENT_SECRET=QWERTYUIOP
