--- a/.github/workflows/pr-build-merge.yml
+++ b/.github/workflows/pr-build-merge.yml
@@ -2,7 +2,7 @@ name: PR build and merge
 
 on:
   pull_request:
-    types: [opened, synchronize, reopened]
+    types: [ opened, synchronize, reopened ]
   push:
     branches:
       - main
@@ -18,20 +18,32 @@ jobs:
     timeout-minutes: 10
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-    - name: 'Create environment file'
-      run: touch .env
+      - name: 'Create environment file'
+        run: touch .env
 
-    - name: 'Build test containers'
-      run: docker compose build app_test
+      - name: 'Build test containers'
+        run: docker compose build app_test
 
-    - name: 'Run validation & test'
-      run: docker compose run --service-ports app_test
+      - name: 'Run validation & test'
+        run: docker compose run --service-ports app_test
 
-    - name: 'Stop containers'
-      if: always()
-      run: docker compose down
+      - name: 'Run SonarCloud Scan'
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+      - name: 'Run SonarQube Quality Gate check'
+        uses: sonarsource/sonarqube-quality-gate-action@master
+        timeout-minutes: 5
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+      - name: 'Stop containers'
+        if: always()
+        run: docker compose down
