--- a/pyproject.toml
+++ b/pyproject.toml
@@ -87,6 +87,7 @@ filterwarnings = [
 
 [tool.coverage.run]
 branch = true
+relative_files = true
 
 [tool.ruff]
 extend-exclude = [".vscode", ".devcontainer", "swo"]
