--- a/.env.sample
+++ b/.env.sample
@@ -12,3 +12,4 @@ EXT_CCP_CLIENT_ID=123456789
 EXT_AWS_OPENID_SCOPE=urn://dev.aws.services.softwareone.com/.default
 EXT_CCP_OAUTH_URL=https://login.microsoftonline.com/<tenant_id>/oauth2/v2.0/token
 EXT_CCP_CLIENT_SECRET=QWERTYUIOP
+EXT_AWS_REGION=us-east-1
