--- a/.env.sample
+++ b/.env.sample
@@ -13,3 +13,8 @@ EXT_AWS_OPENID_SCOPE=urn://dev.aws.services.softwareone.com/.default
 EXT_CCP_OAUTH_URL=https://login.microsoftonline.com/<tenant_id>/oauth2/v2.0/token
 EXT_CCP_CLIENT_SECRET=QWERTYUIOP
 EXT_AWS_REGION=us-east-1
+EXT_CRM_API_BASE_URL=https://swo-ip-apim-xxx
+EXT_CRM_OAUTH_URL=https://bit-ba-test.xxxx/oauth/token
+EXT_CRM_CLIENT_ID=33faer-xxxx
+EXT_CRM_CLIENT_SECRET=C1dtF-xxxx
+EXT_CRM_AUDIENCE=https://swo-ip-unified-ticketing-uat.xxx
