--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,5 +30,5 @@ jobs:
         username: ${{ secrets.REGISTRY_USERNAME }}
         password: ${{ secrets.REGISTRY_PASSWORD }}
     - run: |
-        docker build -f prod.Dockerfile -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/swo-extensions-aws:${{ steps.get_version.outputs.VERSION }} .
-        docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/swo-extensions-aws:${{ steps.get_version.outputs.VERSION }}
+        docker build -f prod.Dockerfile -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/gha/swo-extensions-aws:${{ steps.get_version.outputs.VERSION }} .
+        docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/gha/swo-extensions-aws:${{ steps.get_version.outputs.VERSION }}
