--- a/pyproject.toml
+++ b/pyproject.toml
@@ -92,25 +92,26 @@ relative_files = true
 [tool.ruff]
 extend-exclude = [".vscode", ".devcontainer", "swo"]
 output-format = "full"
+line-length = 100
 
 [tool.ruff.lint]
 
 select = [
-    "E",  # w errors
-    "W",  # pycodestyle warnings
-    "F",  # pyflakes
-    "I",  # isort
-    "B",  # flake8-bugbear
-    "C4",  # flake8-comprehensions
-    "UP",  # pyupgrade,
-    "PT",  # flake8-pytest-style
-    "T10",  # flake8-pytest-style
+    "E", # w errors
+    "W", # pycodestyle warnings
+    "F", # pyflakes
+    "I", # isort
+    "B", # flake8-bugbear
+    "C4", # flake8-comprehensions
+    "UP", # pyupgrade,
+    "PT", # flake8-pytest-style
+    "T10", # flake8-pytest-style
 ]
 ignore = [
     "PT004", # fixture '{name}' does not return anything, add leading underscore
     "PT011", # pytest.raises({exception}) is too broad, set the match parameter or use a more specific exception
-    "B008",  # do not perform function calls in argument defaults
-    "B904",  # Within an `except` clause, raise exceptions with `raise ... from err` or `raise ... from None` to distinguish them from errors in exception handling
+    "B008", # do not perform function calls in argument defaults
+    "B904", # Within an `except` clause, raise exceptions with `raise ... from err` or `raise ... from None` to distinguish them from errors in exception handling
 ]
 
 [tool.ruff.lint.isort]
