--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ boto3 = "1.34.*"
 django = "4.2.*" # should it be a dependency of the extension ? it is already a dependency of the sdk.
 jinja2 = "3.1.*"
 markdown-it-py = "3.0.*"
+mpt-extension-sdk = "4.0.*"
 openpyxl = "3.1.*"
 phonenumbers = "8.13.*"
 pyairtable = "2.3.*"
@@ -52,7 +53,7 @@ typing-extensions = "4.9.*"
 azure-monitor-opentelemetry-exporter = "1.0.0b25"
 click = "8.1.*"
 debugpy = "1.8.*"
-gunicorn = "22.0.*"
+gunicorn = "23.0.*"
 opentelemetry-api = "1.30.*"
 opentelemetry-instrumentation-django = "0.51b0"
 opentelemetry-instrumentation-logging = "0.51b0"
