--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.12,<4"
+azure-identity = "^1.21.0"
+azure-keyvault-secrets = "^4.9.0"
 boto3 = "1.34.*"
 django = "4.2.*" # should it be a dependency of the extension ? it is already a dependency of the sdk.
 jinja2 = "3.1.*"
