--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,9 +3,9 @@ sonar.organization=softwareone-mpt-github
 
 sonar.language=py
 
-sonar.sources=swo_aws_extension
+sonar.sources=swo_aws_extension, swo_mpt_api
 sonar.tests=tests
-sonar.inclusions=swo_aws_extension/**
+sonar.inclusions=swo_aws_extension/**, swo_mpt_api/**
 sonar.exclusions=tests/**, swo_aws_extension/templates/**
 
 sonar.python.coverage.reportPaths=coverage.xml
