#MPT-11250 Enable pyupgrade after migrating to uv
- Enable pyupgrade in pyproject.toml
- Fix code to pass pyupgrade

https://softwareone.atlassian.net/browse/MPT-11250

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -121,7 +121,7 @@ select = [
     "I", # isort
     "B", # flake8-bugbear
     "C4", # flake8-comprehensions
-    #"UP", # pyupgrade,
+    "UP", # pyupgrade,
     "PT", # flake8-pytest-style
     "T10", # flake8-pytest-style
 ]
