--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,11 @@ description = "Amazon Web Service extension for SWO Marketplace Platform"
 authors = [{ name = "SoftwareOne AG" }]
 requires-python = ">=3.12,<4"
 readme = "README.md"
-license = {text = "Apache-2.0 license"}
+license = { text = "Apache-2.0 license" }
 
 dependencies = [
     "azure-core>=1.33.0,<2",
-    "boto3==1.34.*",
+    "boto3==1.39.*",
     "django==4.2.*",
     "jinja2==3.1.*",
     "markdown-it-py==3.0.*",
@@ -48,7 +48,6 @@ dev = [
     "ruff==0.12.*",
     "types-openpyxl==3.1.*",
     "types-requests==2.31.*",
-
 ]
 runtime = [
     "azure-monitor-opentelemetry-exporter==1.0.0b25",
@@ -59,6 +58,7 @@ runtime = [
     "opentelemetry-instrumentation-django==0.51b0",
     "opentelemetry-instrumentation-logging==0.51b0",
     "opentelemetry-instrumentation-requests==0.51b0",
+    "opentelemetry-instrumentation-botocore==0.51b0",
     "opentelemetry-sdk==1.30.*",
     "pyfiglet==1.0.*",
     "rich==13.7.*",
@@ -95,7 +95,7 @@ filterwarnings = [
 [tool.coverage.run]
 branch = true
 relative_files = true
-omit=[
+omit = [
     "swo/**",
     "tests/**"
 ]
