--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
     "django==4.2.*",
     "jinja2==3.1.*",
     "markdown-it-py==3.0.*",
-    "mpt-extension-sdk>=5.2.4",
+    "mpt-extension-sdk>=5.2.4,<5.3.0",
     "openpyxl==3.1.*",
     "phonenumbers==8.13.*",
     "pyairtable==2.3.*",
