MPT-11920 Add editorconfig, pre-commit, uv-lock check, update ruff to version 0.12.*

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,6 @@ dev = [
     "ipdb==0.13.*",
     "ipython==8.*",
     "mypy==1.8.*",
-    "poetry-plugin-sort==0.2.*",
     "pre-commit==3.6.*",
     "pytest==7.4.*",
     "pytest-cov==4.1.*",
@@ -46,15 +45,10 @@ dev = [
     "pytest-xdist==3.5.*",
     "requests-mock==1.12.*",
     "responses==0.24.*",
-    "ruff==0.3.*",
+    "ruff==0.12.*",
     "types-openpyxl==3.1.*",
     "types-requests==2.31.*",
 
-]
-sdk = [
-    "django-ninja==1.1.*",
-    "pyjwt==2.8.*",
-    "typing-extensions==4.9.*",
 ]
 runtime = [
     "azure-monitor-opentelemetry-exporter==1.0.0b25",
@@ -74,7 +68,6 @@ runtime = [
 [tool.uv]
 default-groups = [
     "dev",
-    "sdk",
     "runtime",
 ]
 
@@ -126,10 +119,11 @@ select = [
     "T10", # flake8-pytest-style
 ]
 ignore = [
-    "PT004", # fixture '{name}' does not return anything, add leading underscore
     "PT011", # pytest.raises({exception}) is too broad, set the match parameter or use a more specific exception
     "B008", # do not perform function calls in argument defaults
     "B904", # Within an `except` clause, raise exceptions with `raise ... from err` or `raise ... from None` to distinguish them from errors in exception handling
+    "UP046", # Doesn't properly work with ParamSpec and python 3.12
+    "UP047", # Doesn't properly work with ParamSpec and python 3.12
 ]
 
 [tool.ruff.lint.isort]
