--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       dockerfile: prod.Dockerfile
     working_dir: /extension
     command: swoext run --no-color
-    volumes: 
+    volumes:
       - .:/extension
     env_file:
       - .env
@@ -35,7 +35,7 @@ services:
       context: .
       dockerfile: dev.Dockerfile
     working_dir: /extension
-    command: bash -c "ruff check . && pytest"
+    command: bash -c "ruff check . && uv lock --check && pytest"
     volumes:
       - .:/extension
     env_file:
