--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
     "django==4.2.*",
     "jinja2==3.1.*",
     "markdown-it-py==3.0.*",
-    "mpt-extension-sdk>=5.2.4,<5.3.0",
+    "mpt-extension-sdk==5.5.*",
     "openpyxl==3.1.*",
     "phonenumbers==8.13.*",
     "pyairtable==2.3.*",
@@ -22,9 +22,6 @@ dependencies = [
     "requests==2.32.*",
     "types-openpyxl==3.1.*",
 ]
-
-[project.scripts]
-swoext = "swo.mpt.extensions.runtime.swoext:main"
 
 [project.entry-points."swo.mpt.ext"]
 app_config = "swo_aws_extension.apps:ExtensionConfig"
