--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,11 +12,11 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = ">=3.12,<4"
 azure-core = "^1.33.0"
-boto3 = "1.34.*"
+boto3 = "1.39.*"
 django = "4.2.*" # should it be a dependency of the extension ? it is already a dependency of the sdk.
 jinja2 = "3.1.*"
 markdown-it-py = "3.0.*"
-mpt-extension-sdk = "4.1.*"
+mpt-extension-sdk = "4.3.*"
 openpyxl = "3.1.*"
 phonenumbers = "8.13.*"
 pyairtable = "2.3.*"
@@ -43,6 +43,7 @@ responses = "0.24.*"
 ruff = "0.3.*"
 types-openpyxl = "3.1.*"
 types-requests = "2.31.*"
+requests-mock = "1.12.*"
 
 [tool.poetry.group.sdk.dependencies] # Move to the SDK when splitting
 django-ninja = "1.1.*"
@@ -59,6 +60,7 @@ opentelemetry-api = "1.30.*"
 opentelemetry-instrumentation-django = "0.51b0"
 opentelemetry-instrumentation-logging = "0.51b0"
 opentelemetry-instrumentation-requests = "0.51b0"
+opentelemetry-instrumentation-botocore = "0.51b0"
 opentelemetry-sdk = "1.30.*"
 pyfiglet = "1.0.*"
 rich = "13.7.*"
@@ -79,7 +81,7 @@ build-backend = "poetry.core.masonry.api"
 [tool.pytest.ini_options]
 testpaths = "tests"
 pythonpath = "."
-addopts = "--cov=swo_aws_extension --cov=swo_ccp_client --cov=swo_crm_service_client --cov=swo_finops_client --cov-report=term-missing --cov-report=html --cov-report=xml"
+addopts = "--cov=. --cov-report=term-missing --cov-report=html --cov-report=xml"
 DJANGO_SETTINGS_MODULE = "tests.django.settings"
 log_cli = false
 filterwarnings = [
@@ -90,6 +92,10 @@ filterwarnings = [
 [tool.coverage.run]
 branch = true
 relative_files = true
+omit = [
+    "swo/**",
+    "tests/**"
+]
 
 [tool.ruff]
 extend-exclude = [".vscode", ".devcontainer", "swo"]
