--- a/setup.cfg
+++ b/setup.cfg
@@ -28,3 +28,64 @@ select = WPS, E999
 extend-ignore =
   # Found string constant over-use
   WPS226
+
+# TODO: remove one day
+per-file-ignores =
+  tests/**/*.py: WPS
+  tests/*.py: WPS
+  swo_aws_extension/airtable/models.py: WPS202 WPS221 WPS229 WPS420 WPS431 WPS602
+  swo_aws_extension/apps.py: WPS300
+  swo_aws_extension/aws/client.py: WPS111 WPS210 WPS214 WPS229 WPS301 WPS338 WPS463
+  swo_aws_extension/aws/config.py: WPS121 WPS122 WPS214 WPS338 WPS420 WPS432
+  swo_aws_extension/aws/errors.py: WPS110 WPS111 WPS225 WPS231 WPS237 WPS238 WPS301 WPS328 WPS430 WPS469 WPS505
+  swo_aws_extension/constants.py: WPS110 WPS118 WPS202 WPS407
+  swo_aws_extension/default.py: WPS111 WPS407
+  swo_aws_extension/extension.py: WPS111 WPS229
+  swo_aws_extension/file_builder/zip_builder.py: WPS110
+  swo_aws_extension/flows/fulfillment/__init__.py: WPS412
+  swo_aws_extension/flows/fulfillment/base.py: WPS210 WPS213 WPS221 WPS231 WPS232 WPS400
+  swo_aws_extension/flows/fulfillment/pipelines.py: WPS235
+  swo_aws_extension/flows/jobs/billing_journal/billing_journal_generator.py: WPS110 WPS111 WPS118 WPS201 WPS204 WPS205 WPS210 WPS211 WPS213 WPS214 WPS220 WPS221 WPS229 WPS230 WPS231 WPS235 WPS237 WPS238 WPS338 WPS414 WPS432 WPS504 WPS529 WPS602
+  swo_aws_extension/flows/jobs/billing_journal/item_journal_line.py: WPS111 WPS202 WPS210 WPS211 WPS338 WPS358 WPS504
+  swo_aws_extension/flows/jobs/billing_journal/models.py: WPS110 WPS115 WPS202 WPS336
+  swo_aws_extension/flows/jobs/pool_notifications.py: WPS210 WPS231 WPS232 WPS426 WPS504 WPS529
+  swo_aws_extension/flows/jobs/process_aws_invitations.py: WPS210 WPS229 WPS432
+  swo_aws_extension/flows/jobs/synchronize_agreements.py: WPS110 WPS111 WPS204 WPS210 WPS213 WPS221 WPS229 WPS231 WPS232 WPS327 WPS426
+  swo_aws_extension/flows/order.py: WPS111 WPS202 WPS214 WPS235 WPS237 WPS336 WPS338
+  swo_aws_extension/flows/steps/__init__.py: WPS410 WPS412
+  swo_aws_extension/flows/steps/assign_mpa.py: WPS111 WPS204 WPS210 WPS213 WPS229 WPS237 WPS338 WPS602
+  swo_aws_extension/flows/steps/ccp_onboard.py: WPS111 WPS210 WPS229
+  swo_aws_extension/flows/steps/create_linked_account.py: WPS111 WPS213 WPS229 WPS235
+  swo_aws_extension/flows/steps/create_subscription.py: WPS210
+  swo_aws_extension/flows/steps/invitation_links.py: WPS111 WPS210 WPS213 WPS221 WPS229 WPS231 WPS307 WPS338 WPS504 WPS529
+  swo_aws_extension/flows/steps/register_transfered_mpa_airtable.py: WPS338
+  swo_aws_extension/flows/steps/service_crm_steps.py: WPS118 WPS202 WPS235 WPS617
+  swo_aws_extension/flows/steps/setup_context.py: WPS118 WPS204 WPS213 WPS338 WPS504
+  swo_aws_extension/flows/steps/validate.py: WPS118 WPS213 WPS504
+  swo_aws_extension/flows/template.py: WPS212 WPS231 WPS232 WPS602
+  swo_aws_extension/flows/validation/__init__.py: WPS412
+  swo_aws_extension/flows/validation/base.py: WPS229 WPS231 WPS420 WPS504
+  swo_aws_extension/flows/validation/purchase.py: WPS110 WPS202 WPS204 WPS235
+  swo_aws_extension/flows/validation/steps.py: WPS110
+  swo_aws_extension/management/commands/check_pool_accounts_notifications.py: WPS110
+  swo_aws_extension/management/commands/generate_billing_journals.py: WPS110 WPS111 WPS210 WPS231 WPS237 WPS238 WPS432
+  swo_aws_extension/management/commands/order_process_aws_invitations.py: WPS110
+  swo_aws_extension/management/commands/refresh_ccp_openid_secret.py: WPS110
+  swo_aws_extension/management/commands/synchronize_agreements.py: WPS110
+  swo_aws_extension/management/commands/upload_journal.py: WPS110 WPS210 WPS213 WPS237
+  swo_aws_extension/management/commands/upload_journal_attachment.py: WPS110 WPS111 WPS210 WPS229 WPS338
+  swo_aws_extension/management/commands_helpers/__init__.py: WPS410 WPS412
+  swo_aws_extension/management/commands_helpers/styled_print_command.py: WPS110
+  swo_aws_extension/notifications.py: WPS110 WPS202 WPS213 WPS229 WPS430
+  swo_aws_extension/parameters.py: WPS110 WPS111 WPS202 WPS204 WPS231
+  swo_ccp_client/client.py: WPS110 WPS210 WPS214 WPS338 WPS432 WPS458 WPS504
+  swo_crm_service_client/__init__.py: WPS410 WPS412
+  swo_crm_service_client/client.py: WPS110 WPS121 WPS122 WPS214 WPS221 WPS237 WPS338 WPS420 WPS432 WPS504
+  swo_finops_client/client.py: WPS110 WPS111 WPS121 WPS122 WPS214 WPS420 WPS430 WPS432 WPS458
+  swo_mpt_api/__init__.py: WPS410 WPS412
+  swo_mpt_api/billing/__init__.py: WPS410 WPS412
+  swo_mpt_api/billing/journal_client.py: WPS110 WPS214 WPS221
+  swo_mpt_api/httpquery.py: WPS110 WPS111 WPS214 WPS338
+  swo_mpt_api/models/hints.py: WPS110 WPS115 WPS202 WPS453
+  swo_rql/__init__.py: WPS111 WPS410 WPS412
+  swo_rql/query_builder.py: WPS110 WPS111 WPS115 WPS210 WPS211 WPS214 WPS221 WPS231 WPS237 WPS478
