--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,7 +42,7 @@ dev = [
     "pytest-xdist==3.5.*",
     "requests-mock==1.12.*",
     "responses==0.24.*",
-    "ruff==0.12.*",
+    "ruff==0.12.11",  # force ruff version to have same formatting everywhere
     "types-openpyxl==3.1.*",
     "types-requests==2.31.*",
      "wemake-python-styleguide==1.3.*",
