MPT-13123 AWS check notification pool job is failing in the middle of the processing

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,7 @@ sonar.language=py
 sonar.sources=swo_aws_extension, swo_mpt_api
 sonar.tests=tests
 sonar.inclusions=swo_aws_extension/**, swo_mpt_api/**
-sonar.exclusions=tests/**, swo_aws_extension/templates/**
+sonar.exclusions=tests/**, swo_aws_extension/templates/**.html, swo_aws_extension/default.py
 
 sonar.python.coverage.reportPaths=coverage.xml
 sonar.python.xunit.reportPath=coverage.xml
