MPT-13123 AWS check notification pool job is failing in the middle of… (#131)
… the processing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -93,8 +93,8 @@ filterwarnings = [
 branch = true
 relative_files = true
 omit = [
-    "swo/**",
-    "tests/**"
+    "tests/**",
+    "swo_aws_extension/default.py",
 ]
 
 [tool.ruff]
