MPT-14235 AWS Refactor journal line processor
(cherry picked from commit 06ed66f94fc9afe5dd4bcbc1ebde802816b7069d)

# Conflicts:
#	pyproject.toml
#	setup.cfg
#	swo_aws_extension/flows/jobs/billing_journal/error.py
#	swo_aws_extension/shared.py
#	tests/conftest.py
#	tests/flows/jobs/billing_journal/test_item_journal_file.py

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -97,6 +97,11 @@ omit = [
     "swo_aws_extension/default.py",
 ]
 
+[tool.coverage.report]
+exclude_also = [
+    "raise NotImplementedError",
+]
+
 [tool.ruff]
 extend-exclude = [".vscode", ".devcontainer", "swo"]
 output-format = "full"
