MPT-13950 AWS support invoice credits

--- a/setup.cfg
+++ b/setup.cfg
@@ -43,6 +43,7 @@ per-file-ignores =
   swo_aws_extension/flows/fulfillment/__init__.py: WPS412
   swo_aws_extension/flows/fulfillment/base.py: WPS210 WPS213 WPS221 WPS231 WPS232 WPS400
   swo_aws_extension/flows/fulfillment/pipelines.py: WPS235
+  swo_aws_extension/flows/jobs/billing_journal/line_processors/base_processor.py: WPS214
   swo_aws_extension/flows/jobs/billing_journal/billing_journal_generator.py: WPS110 WPS111 WPS118 WPS201 WPS204 WPS205 WPS210 WPS211 WPS213 WPS214 WPS220 WPS221 WPS229 WPS230 WPS231 WPS235 WPS237 WPS238 WPS338 WPS414 WPS432 WPS504 WPS529 WPS602
   swo_aws_extension/flows/jobs/billing_journal/models.py: WPS110 WPS115 WPS202 WPS336
   swo_aws_extension/flows/jobs/billing_journal/invoice_details.py: WPS211
