MPT-14267 Adjust test code structure

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,7 +23,7 @@ extend-exclude =
   .venv
 
 # We only run `wemake-python-styleguide` with `flake8`:
-select = WPS, E999
+select = WPS E999
 
 extend-ignore =
   # Found string constant over-use
@@ -77,10 +77,10 @@ per-file-ignores =
   swo_aws_extension/management/commands_helpers/styled_print_command.py: WPS110
   swo_aws_extension/notifications.py: WPS110 WPS202 WPS213 WPS229 WPS430
   swo_aws_extension/parameters.py: WPS110 WPS111 WPS202 WPS204 WPS231
-  swo_ccp_client/client.py: WPS110 WPS210 WPS214 WPS338 WPS432 WPS458 WPS504
-  swo_crm_service_client/__init__.py: WPS410 WPS412
-  swo_crm_service_client/client.py: WPS110 WPS121 WPS122 WPS214 WPS221 WPS237 WPS338 WPS420 WPS432 WPS504
-  swo_finops_client/client.py: WPS110 WPS111 WPS121 WPS122 WPS214 WPS420 WPS430 WPS432 WPS458
+  swo_aws_extension/swo_ccp/client.py: WPS110 WPS210 WPS214 WPS338 WPS432 WPS458 WPS504
+  swo_aws_extension/swo_crm_service/__init__.py: WPS410 WPS412
+  swo_aws_extension/swo_crm_service/client.py: WPS110 WPS121 WPS122 WPS214 WPS221 WPS237 WPS338 WPS420 WPS432 WPS504
+  swo_aws_extension/swo_finops/client.py: WPS110 WPS111 WPS121 WPS122 WPS214 WPS420 WPS430 WPS432 WPS458
   swo_mpt_api/__init__.py: WPS410 WPS412
   swo_mpt_api/billing/__init__.py: WPS410 WPS412
   swo_mpt_api/billing/journal_client.py: WPS110 WPS214 WPS221
@@ -89,55 +89,53 @@ per-file-ignores =
   swo_rql/__init__.py: WPS111 WPS410 WPS412
   swo_rql/query_builder.py: WPS110 WPS111 WPS115 WPS210 WPS211 WPS214 WPS221 WPS231 WPS237 WPS478
   tests/airtable/test_models.py: WPS110 WPS202 WPS218
-  tests/aws/test_client.py:WPS111, WPS202, WPS204, WPS210, WPS221, WPS237, WPS301, WPS432
-  tests/flows/fulfillment/test_base.py: WPS114, WPS118, WPS202, WPS210, WPS211, WPS213, WPS432
-  tests/aws/test_config_azure.py: WPS110, WPS111, WPS118, WPS420
-  tests/conftest.py: WPS110, WPS111, WPS118, WPS201, WPS202, WPS210, WPS211, WPS227, WPS231, WPS237, WPS404, WPS421, WPS429, WPS430, WPS432, WPS504
-  tests/aws/test_errors.py: WPS111, WPS202, WPS301, WPS432
-  tests/flows/jobs/billing_journal/test_billing_journal_generator.py: WPS
-  tests/flows/jobs/test_pool_notifications.py: WPS118, WPS211, WPS218
-  tests/flows/jobs/test_process_aws_invitations.py: WPS110, WPS118, WPS202, WPS210, WPS211, WPS430, WPS432
-  tests/flows/jobs/test_synchronize_agreements.py: WPS118, WPS202, WPS204, WPS210, WPS211, WPS301, WPS420
-  tests/flows/steps/service_crm_steps/test_transfer_with_organization.py: WPS118, WPS202, WPS210
-  tests/flows/steps/validate/test_purchase_transfer_without_organization.py: WPS111, WPS210, WPS432
-  tests/flows/steps/test_assign_mpa.py: WPS111, WPS118, WPS202, WPS204, WPS210, WPS211, WPS221, WPS237, WPS301, WPS430, WPS458
-  tests/flows/steps/test_assign_transfer_mpa.py: WPS210, WPS211, WPS430
-  tests/flows/steps/test_ccp_onboard.py: WPS118, WPS210, WPS211, WPS432
-  tests/flows/steps/test_complete_order.py: WPS118, WPS210, WPS211
-  tests/flows/steps/test_create_linked_account.py: WPS118, WPS202, WPS204, WPS210, WPS211, WPS219, WPS221
-  tests/flows/steps/test_create_subscription.py: WPS118, WPS202, WPS204, WPS210, WPS211, WPS420
-  tests/flows/steps/test_finops.py: WPS110, WPS118, WPS202, WPS211
-  tests/flows/steps/test_invitation_links.py: WPS110, WPS118, WPS202, WPS210, WPS211, WPS430
-  tests/flows/steps/test_mpa_pre_configuration.py: WPS118, WPS210, WPS211
-  tests/flows/steps/test_register_transfered_mpa_airtable.py: WPS210, WPS211
-  tests/flows/steps/test_setup_context.py: WPS110, WPS118, WPS210, WPS211, WPS430, WPS432
-  tests/flows/steps/test_setup_transfer_with_org.py: WPS210, WPS211, WPS430
-  tests/flows/steps/test_validate_transfer_without_organization.py: WPS218
-  tests/flows/validation/test_steps.py: WPS110, WPS210  tests/flows/test_template.py: WPS211
-  tests/flows/validation/test_validation_base.py: WPS110, WPS210, WPS43
-  tests/flows/validation/test_validation_purchase.py: WPS110, WPS118, WPS202, WPS204, WPS210
+  tests/aws/test_client.py:WPS111 WPS202 WPS204 WPS210 WPS221 WPS237 WPS301 WPS432
+  tests/aws/test_config.py: WPS202 WPS110 WPS111 WPS118 WPS420
+  tests/aws/test_errors.py: WPS111 WPS202 WPS301 WPS432
   tests/django/settings.py: WPS407
-  tests/management/command_helpers/test_styled_print_command.py: WPS110
-  tests/management/commands/test_generate_billing_journals.py: WPS202, WPS204, WPS432
+  tests/file_builder/test_zip_builder.py: WPS110
+  tests/flows/fulfillment/test_base.py: WPS114 WPS118 WPS202 WPS210 WPS211 WPS213 WPS432
+  tests/flows/fulfillment/test_pipelines.py: WPS118
+  tests/flows/jobs/billing_journal/test_billing_journal_generator.py: WPS
+  tests/flows/jobs/test_pool_notifications.py: WPS118 WPS211 WPS218
+  tests/flows/jobs/test_process_aws_invitations.py: WPS110 WPS118 WPS202 WPS210 WPS211 WPS430 WPS432
+  tests/flows/jobs/test_synchronize_agreements.py: WPS118 WPS202 WPS204 WPS210 WPS211 WPS301 WPS420
+  tests/flows/steps/service_crm_steps/test_transfer_with_organization.py: WPS118 WPS202 WPS210
+  tests/flows/steps/validate/test_purchase_transfer_without_organization.py: WPS111 WPS210 WPS432
+  tests/flows/steps/test_assign_mpa.py: WPS111 WPS118 WPS202 WPS204 WPS210 WPS211 WPS221 WPS237 WPS301 WPS430 WPS458
+  tests/flows/steps/test_ccp_onboard.py: WPS118 WPS210 WPS211 WPS432
+  tests/flows/steps/test_complete_order.py: WPS118 WPS210 WPS211
+  tests/flows/steps/test_create_linked_account.py: WPS118 WPS202 WPS204 WPS210 WPS211 WPS219 WPS221
+  tests/flows/steps/test_create_subscription.py: WPS118 WPS202 WPS204 WPS210 WPS211 WPS420
+  tests/flows/steps/test_finops.py: WPS110 WPS118 WPS202 WPS211
+  tests/flows/steps/test_invitation_links.py: WPS110 WPS118 WPS202 WPS210 WPS211 WPS430
+  tests/flows/steps/test_mpa_pre_configuration.py: WPS118 WPS210 WPS211
+  tests/flows/steps/test_register_transfered_mpa_airtable.py: WPS210 WPS211
+  tests/flows/steps/test_service_crm_steps.py: WPS111 WPS118 WPS202 WPS204 WPS210 WPS211 WPS218
+  tests/flows/steps/test_setup_context.py: WPS110 WPS118 WPS202 WPS204 WPS210 WPS211 WPS430 WPS432
+  tests/flows/steps/test_validate.py: WPS111 WPS210 WPS218 WPS432
+  tests/flows/validation/test_base.py: WPS110 WPS210 WPS432
+  tests/flows/validation/test_purchase.py: WPS110 WPS118 WPS202 WPS204 WPS210
+  tests/flows/validation/test_steps.py: WPS110 WPS210  tests/flows/test_template.py: WPS211
+  tests/flows/test_order.py: WPS118 WPS202 WPS204 WPS210 WPS218 WPS430
+  tests/management/commands/test_generate_billing_journals.py: WPS202 WPS204 WPS432
   tests/management/commands/test_synchronize_agreements.py: WPS118
   tests/management/commands/test_upload_journal.py: WPS118
   tests/management/commands/test_upload_journal_attachment.py: WPS110
-  tests/swo_aws_extension/flows/steps/test_service_crm_steps.py: WPS111, WPS118, WPS202, WPS204, WPS211, WPS218
-  tests/swo_aws_extension/flows/test_order.py: WPS118, WPS202, WPS204, WPS210, WPS218, WPS430
-  tests/swo_aws_extension/utils/test_zip_builder.py: WPS110
-  tests/swo_aws_extension/test_initializer.py: WPS110, WPS111, WPS213, WPS218, WPS230, WPS431
-  tests/swo_aws_extension/test_openid.py: WPS210
-  tests/swo_aws_extension/test_parameters.py: WPS110, WPS118, WPS202, WPS235
-  tests/swo_ccp_client/test_ccp_client.py: WPS110, WPS118, WPS202, WPS211, WPS301
-  tests/swo_crm_service_client/test_crm_client.py: WPS202, WPS204
-  tests/swo_finops_client/test_finops_client.py: WPS118, WPS202, WPS204, WPS210, WPS432, WPS458
-  tests/swo_mpt_api/test_billing_journal_attachemnts.py: WPS110, WPS111, WPS210, WPS432
-  tests/swo_mpt_api/test_billing_journal_client.py: WPS110, WPS111, WPS202, WPS204, WPS210
-  tests/swo_mpt_api/test_billing_journal_charges_client.py: WPS110
-  tests/swo_mpt_api/test_httpquery.py: WPS110, WPS116, WPS202, WPS221
-  tests/swo_rql/test_expressions.py: WPS111, WPS210, WPS221, WPS347
-  tests/swo_rql/test_rql_base.py: WPS110, WPS111, WPS122, WPS202, WPS204, WPS210, WPS218, WPS221, WPS420, WPS431, WPS432, WPS473, WPS604
+  tests/management/commands_helpers/test_styled_print_command.py: WPS110
+  tests/swo_ccp/test_client.py: WPS110 WPS118 WPS202 WPS211 WPS301
+  tests/swo_crm_service/test_client.py: WPS202 WPS204
+  tests/swo_crm_service/test_config.py:
+  tests/swo_finops/test_client.py: WPS118 WPS202 WPS204 WPS210 WPS432 WPS458
+  tests/swo_mpt_api/billing/test_billing_client.py: WPS110 WPS111 WPS202 WPS204 WPS210 WPS432
+  tests/swo_mpt_api/billing/test_journal_client.py: WPS110 WPS111 WPS202 WPS204 WPS210 WPS432
+  tests/swo_mpt_api/test_client.py: WPS110
+  tests/swo_mpt_api/test_httpquery.py: WPS110 WPS116 WPS202 WPS221
+  tests/swo_rql/test_query_builder.py: WPS110 WPS111 WPS122 WPS202 WPS204 WPS210 WPS218 WPS221 WPS347 WPS420 WPS431 WPS432 WPS473 WPS604
+  tests/conftest.py: WPS110 WPS111 WPS118 WPS201 WPS202 WPS210 WPS211 WPS227 WPS231 WPS237 WPS404 WPS421 WPS429 WPS430 WPS432 WPS504
   tests/test_apps.py: WPS111 WPS421
   tests/test_extension.py: WPS432
-  tests/test_notifications.py: WPS202, WPS211, WPS213, WPS221, WPS235, WPS462
-  tests/test_parameters.py: WPS210, WPS218
+  tests/test_initializer.py: WPS110 WPS111 WPS213 WPS218 WPS230 WPS431
+  tests/test_notifications.py: WPS202 WPS211 WPS213 WPS221 WPS235 WPS462
+  tests/test_openid.py: WPS210
+  tests/test_parameters.py: WPS110 WPS118 WPS202 WPS210 WPS218 WPS235
