--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ resources:
       
 variables:
   - name: appName
-    value: swo-extension-aws
+    value: mpt-extension-aws
 
 stages:
   - stage: prepare
