--- a/helm/swo-extension-aws/values.yaml
+++ b/helm/swo-extension-aws/values.yaml
@@ -43,19 +43,19 @@ global:
   azure_tenant_id: ""
 
   cronjobs:
-    - name: aws-invitations
+    aws-invitations:
       schedule: ""
       command: order_process_aws_invitations
-    - name: sync-agreements
+    sync-agreements:
       schedule: ""
       command: synchronize_agreements
-    - name: check-pool
+    check-pool:
       schedule: ""
       command: check_pool_accounts_notifications
-    - name: ccp-secret
+    ccp-secret:
       schedule: ""
       command: refresh_ccp_openid_secret
-    - name: generate-billing
+    generate-billing:
       schedule: ""
       command: generate_billing_journals
 
