--- a/helm/swo-extension-aws/charts/api/Chart.yaml
+++ b/helm/swo-extension-aws/charts/api/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: mpt-extension-aws-api
+name: swo-extension-aws-api
 description: A Helm chart swo-extension-aws owned by Turing
 type: application
 
