--- a/pyproject.toml
+++ b/pyproject.toml
@@ -132,8 +132,8 @@ show-source = true
 statistics = false
 # To be fixed and removed
 per-file-ignores = [
-  "tests/**/*.py: WPS202 WPS210 WPS211 WPS402 WPS231",
-  "tests/*.py: WPS202 WPS210 WPS211 WPS402 WPS231",
+  "tests/**/*.py: WPS202 WPS210  WPS211 WPS213 WPS402 WPS231",
+  "tests/*.py: WPS202 WPS210 WPS211 WPS213 WPS402 WPS231",
   "swo_aws_extension/apps.py: WPS300",
   "swo_aws_extension/aws/client.py: WPS214",
   "swo_aws_extension/aws/config.py: WPS122 WPS121 WPS214",
@@ -142,6 +142,7 @@ per-file-ignores = [
   "swo_aws_extension/default.py: WPS111 WPS407",
   "swo_aws_extension/management/commands_helpers/__init__.py: WPS410 WPS412",
   "swo_aws_extension/notifications.py: WPS202 WPS213 WPS430",
+  "swo_aws_extension/parameters.py: WPS202",
   "swo_aws_extension/swo/ccp/client.py: WPS210 WPS214",
   "swo_aws_extension/swo/rql/query_builder.py: WPS110 WPS111 WPS115 WPS210 WPS211 WPS214 WPS221 WPS231 WPS237 WPS478",
   "swo_aws_extension/swo/finops/client.py: WPS231 WPS505 WPS111 WPS121 WPS122 WPS214 WPS420 WPS430 WPS432 WPS458",
@@ -153,7 +154,6 @@ per-file-ignores = [
   "tests/swo/ccp/test_client.py: WPS202 WPS211",
   "tests/aws/test_client.py: WPS432 WPS202 WPS204",
 "tests/test_initializer.py: WPS111 WPS213 WPS218 WPS230 WPS431",
-  "tests/test_notifications.py: WPS202 WPS213 WPS221 WPS235 WPS462",
   "tests/swo/mpt/sync/test_syncer.py: WPS118 WPS214 WPS432 WPS202 WPS204 WPS210 WPS211 WPS301 WPS420",
   "tests/swo/mpt/sync/conftest.py: WPS430 WPS202 WPS118",
   "tests/swo/finops/test_client.py: WPS202 WPS204 WPS210",
