MPT-15813 Billing transfer: assign PMA to the order

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
   "django==4.2.*",
   "jinja2==3.1.*",
   "markdown-it-py==3.0.*",
-  "mpt-extension-sdk==5.10.*",
+  "mpt-extension-sdk==5.17.*",
   "openpyxl==3.1.*",
   "phonenumbers==8.13.*",
   "pyairtable==2.3.*",
@@ -131,10 +131,13 @@ show-source = true
 statistics = false
 # To be fixed and removed
 per-file-ignores = [
+  "tests/**/*.py: WPS202 WPS210 WPS211 WPS402 WPS231",
+  "tests/*.py: WPS202 WPS210 WPS211 WPS402 WPS231",
   "swo_aws_extension/apps.py: WPS300",
   "swo_aws_extension/aws/client.py: WPS214",
   "swo_aws_extension/aws/config.py: WPS122 WPS121 WPS214",
   "swo_aws_extension/aws/errors.py: WPS225 WPS231 WPS238 WPS328 WPS430 WPS505",
+  "swo_aws_extension/constants.py: WPS202",
   "swo_aws_extension/default.py: WPS111 WPS407",
   "swo_aws_extension/management/commands_helpers/__init__.py: WPS410 WPS412",
   "swo_aws_extension/notifications.py: WPS202 WPS213 WPS430",
