--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,7 +14,7 @@ repos:
       - id: end-of-file-fixer
       - id: trailing-whitespace
       - id: no-commit-to-branch
-        args: [--pattern, '^release/.*']
+        args: [--pattern, "^release/.*"]
       - id: detect-private-key
 
   - repo: https://github.com/astral-sh/uv-pre-commit
@@ -25,5 +25,6 @@ repos:
   - repo: https://github.com/PyCQA/flake8
     rev: 7.3.0
     hooks:
-    -   id: flake8
-        additional_dependencies: [Flake8-pyproject]
+      - id: flake8
+        additional_dependencies:
+          ["flake8-aaa==0.17.*", "flake8-pyproject==1.2.*"]
