--- a/pyproject.toml
+++ b/pyproject.toml
@@ -142,7 +142,7 @@ per-file-ignores = [
   "swo_aws_extension/default.py: WPS111 WPS407",
   "swo_aws_extension/management/commands_helpers/__init__.py: WPS410 WPS412",
   "swo_aws_extension/notifications.py: WPS202 WPS213 WPS430",
-  "swo_aws_extension/parameters.py: WPS202",
+  "swo_aws_extension/parameters.py: WPS204 WPS202",
   "swo_aws_extension/swo/ccp/client.py: WPS210 WPS214",
   "swo_aws_extension/swo/rql/query_builder.py: WPS110 WPS111 WPS115 WPS210 WPS211 WPS214 WPS221 WPS231 WPS237 WPS478",
   "swo_aws_extension/swo/finops/client.py: WPS231 WPS505 WPS111 WPS121 WPS122 WPS214 WPS420 WPS430 WPS432 WPS458",
