feat: add makefile and improve compose files
(cherry picked from commit 8cadb2c7018106622358569da893a8b53eea27cf)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,7 @@ jobs:
         username: ${{ vars.EXTENSION_REGISTRY_USERNAME }}
         password: ${{ secrets.EXTENSION_REGISTRY_PASSWORD }}
     - run: |
-        docker build -f prod.Dockerfile -t ${{ vars.EXTENSION_REGISTRY_LOGIN_SERVER }}/swo-extensions-aws:${{ steps.get_version.outputs.VERSION }} .
+        docker build --target prod -t ${{ vars.EXTENSION_REGISTRY_LOGIN_SERVER }}/swo-extensions-aws:${{ steps.get_version.outputs.VERSION }} .
         docker push ${{ vars.EXTENSION_REGISTRY_LOGIN_SERVER }}/swo-extensions-aws:${{ steps.get_version.outputs.VERSION }}
 
   dtrack:
