feat: add makefile and improve compose files

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ resources:
       type: git
       name: MPT/ops-build-templates-aks-releases
       ref: releases/v15
-      
+
 variables:
   - name: appName
     value: swo-extension-aws
@@ -42,7 +42,8 @@ stages:
             parameters:
               repository: $(appName)
               sourceBuild: $(buildVersion)
-              Dockerfile: prod.Dockerfile 
+              Dockerfile: Dockerfile
+              dockerArgs: --target prod
               skipImagePush: ${{ eq(variables['Build.Reason'], 'PullRequest') }}
 
       - job: BuildHelmChart
