--- a/pyproject.toml
+++ b/pyproject.toml
@@ -144,11 +144,13 @@ per-file-ignores = [
   "swo_aws_extension/notifications.py: WPS202 WPS213 WPS430",
   "swo_aws_extension/parameters.py: WPS204 WPS202",
   "swo_aws_extension/swo/ccp/client.py: WPS210 WPS214",
+  "swo_aws_extension/flows/validation/base.py: WPS407",
   "swo_aws_extension/swo/rql/query_builder.py: WPS110 WPS111 WPS115 WPS210 WPS211 WPS214 WPS221 WPS231 WPS237 WPS478",
   "swo_aws_extension/swo/finops/client.py: WPS231 WPS505 WPS111 WPS121 WPS122 WPS214 WPS420 WPS430 WPS432 WPS458",
   "swo_aws_extension/swo/mpt/sync/syncer.py: WPS202 WPS118 WPS111 WPS204 WPS210 WPS213 WPS221 WPS229 WPS231 WPS232 WPS327 WPS426",
   "tests/aws/test_config.py: WPS202",
   "tests/aws/test_errors.py: WPS202",
+  "tests/flows/validation/test_base.py: WPS118",
   "tests/conftest.py: WPS202 WPS211 WPS231 WPS430",
   "tests/django/settings.py: WPS407",
   "tests/swo/ccp/test_client.py: WPS202 WPS211",
