MPT-16917-Configure APN for customer: Adapt extension to support APN client

--- a/helm/swo-extension-aws/values.yaml
+++ b/helm/swo-extension-aws/values.yaml
@@ -37,7 +37,10 @@ global:
   FfcOperationsSub: default
   MpNotifyCategories: "{}"
   MpInitializer: swo_aws_extension.initializer.initialize
-
+  ManagementRole: default
+  OnboardCustomerRole: default
+  ApnRoleName: default
+  ApnAccountId: default
   replicaCountAPI: 1
   replicaCountWorker: 1
   registryUrl: ""
