--- a/helm/swo-extension-aws/charts/worker/templates/configmap.yaml
+++ b/helm/swo-extension-aws/charts/worker/templates/configmap.yaml
@@ -31,3 +31,7 @@ data:
   EXT_FFC_OPERATIONS_API_BASE_URL: {{ .Values.global.FfcOperationsApiBase | quote }}
   MPT_NOTIFY_CATEGORIES: {{ .Values.global.MpNotifyCategories | quote }}
   MPT_INITIALIZER: {{ .Values.global.MpInitializer | quote }}
+  EXT_MANAGEMENT_ROLE: {{ .Values.global.ManagementRole | quote }}
+  EXT_ONBOARD_CUSTOMER_ROLE: {{ .Values.global.OnboardCustomerRole | quote }}
+  EXT_APN_ROLE_NAME: {{ .Values.global.ApnRoleName | quote }}
+  EXT_APN_ACCOUNT_ID: {{ .Values.global.ApnAccountId | quote }}
