MPT-15833 Fix deployment issue: The FinOps job name is too long

--- a/helm/swo-extension-aws/values.yaml
+++ b/helm/swo-extension-aws/values.yaml
@@ -56,6 +56,6 @@ global:
     generate-billing:
       schedule: ""
       command: generate_billing_journals
-    sync-finops-accounts:
+    sync-finops:
       schedule: ""
       command: synchronize_finops_accounts
