MPT-15833 Fix typo in MPT_INITIALIZER env
(cherry picked from commit 951fa8aad91a2f12c4fca24072ba361cd969e5b3)

--- a/helm/swo-extension-aws/charts/api/templates/configmap.yaml
+++ b/helm/swo-extension-aws/charts/api/templates/configmap.yaml
@@ -30,4 +30,4 @@ data:
   EXT_FFC_SUB: {{ .Values.global.FfcOperationsSub | quote }}
   EXT_FFC_OPERATIONS_API_BASE_URL: {{ .Values.global.FfcOperationsApiBase | quote }}
   MPT_NOTIFY_CATEGORIES: {{ .Values.global.MpNotifyCategories | quote }}
-  MP_INITIALIZER: {{ .Values.global.MpInitializer | quote }}
+  MPT_INITIALIZER: {{ .Values.global.MpInitializer | quote }}
