MPT-15833 Update configuration to manage Azure Tenant Id env
(cherry picked from commit f9e6d2a973266ce47585cdb0ee42813e45f83b06)

--- a/helm/swo-extension-aws/values.yaml
+++ b/helm/swo-extension-aws/values.yaml
@@ -41,7 +41,7 @@ global:
   replicaCountAPI: 1
   replicaCountWorker: 1
   registryUrl: ""
-  azure_tenant_id: ""
+  AzureTenantId: ""
 
   cronjobs:
     aws-invitations:
